# sparklines

./: .deepsource.toml  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CHANGELOG.txt  CONTRIBUTORS.txt  LICENSE.txt  MANIFEST.in  Makefile  README.md  README.rst  pyproject.toml  setup.py  sparklines-1.0.0.yaml  tox.ini
.github/workflows/: lint-test.yml  publish-to-pypi.yml  publish-to-testpypi.yml  python-package.yml  ruff.yaml
examples/: cpu_monitor.py  mac_hardware.py
sparklines/: __init__.py  __main__.py  ansi.py  emphasis.py  render.py  rows.py  scale.py  sparklines.py
test/: demo-output  runtests.py  test_sparkline.py
tests/: __init__.py  demo-output  helpers.py  test_basic.py  test_cli.py  test_emphasis.py  test_mixed.py  test_scale.py  test_sparkline.py  test_wrap.py
