[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "sparklines"
version = "0.6.0"
description = "Generate sparklines for numbers using Unicode characters only."
readme = "README.rst"
requires-python = ">=3.9"
license = "GPL-3.0-or-later"
license-files = ["LICENSE.txt"]
keywords = ["visualization", "chart", "tool"]
authors = [
    {name = "Dinu Gherman", email = "gherman@darwin.in-berlin.de"}
]
dependencies = [
    "termcolor>=2.4.0",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Other Audience",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: PyPy",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "tomli>=2.0.0; python_version < '3.11'",
]

[project.urls]
Homepage = "https://github.com/deeplook/sparklines"
Issues = "https://github.com/deeplook/sparklines/issues"
CI = "https://github.com/deeplook/sparklines/actions"
Changelog = "https://github.com/deeplook/sparklines/releases"
Repository = "https://github.com/deeplook/sparklines.git"
Documentation = "https://github.com/deeplook/sparklines"

[project.scripts]
sparklines = "sparklines.__main__:main"

[tool.ruff]
target-version = "py39"
