[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "sparklines"
version = "1.0.0"
description = "Generate sparklines for numbers using Unicode characters only."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE.txt"]
keywords = ["visualization", "chart", "tool"]
authors = [
    {name = "Dinu Gherman", email = "gherman@darwin.in-berlin.de"}
]
dependencies = [
    "termcolor>=2.4.0",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Other Audience",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: PyPy",
    "License :: OSI Approved :: MIT License",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "tomli>=2.0.0; python_version < '3.11'",
]
dev = [
    "mypy>=1.0",
    "pre-commit>=3.0",
]

[project.urls]
Homepage = "https://github.com/deeplook/sparklines"
Issues = "https://github.com/deeplook/sparklines/issues"
CI = "https://github.com/deeplook/sparklines/actions"
Changelog = "https://github.com/deeplook/sparklines/blob/main/CHANGELOG.md"
Repository = "https://github.com/deeplook/sparklines.git"
Documentation = "https://github.com/deeplook/sparklines"

[project.scripts]
sparklines = "sparklines.__main__:main"

[tool.ruff]
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "UP", "B", "C4", "SIM", "C90", "D", "PERF", "FIX", "TD"]
ignore = [
    "D213",   # conflicts with D212 (summary on first line, our convention)
    "D203",   # conflicts with D211 (no blank line before class)
    "D401",   # imperative mood — overly strict
    "D407",   # missing dashed underline after section — Google style, not ours
    "D406",   # section name should end with newline — Google style, not ours
    "D413",   # missing blank line after last section — handled by D412
    "TD002",  # missing TODO author — overly strict
    "TD003",  # missing TODO issue link — overly strict
    "FIX002", # line contains TODO — we allow TODOs, just want them visible
]

[tool.ruff.lint.mccabe]
max-complexity = 20  # scale_values is intentionally dense; alert on anything worse
